testing/errors/negativeaddress.a
	*=$1000
	!pseudopc $8000 {
		* = $6000	; -> "Tried to write to negative address."
		rts
	}
